# databricks-dify-integration

./: .env.example  .gitignore  .gitmodules  README.md  config.yaml  config.yaml.example  databricks.yml  pyproject.toml
docs/: findings.md  key_points.md  summary.md
dsl/: 02_Genie_API.yml  02_UC_SQL_API.yml  02_Vector_Search.yml  03_MCP_Agent.yml  test.yml  test_agent.yml  ①_LLM_endpoint.yml  ②_Day1_Code_Agent.yml  ④_RAG_Chatbot_External_Knowledge.yml
dsl/optional/: 02_Knowledge_Assistant_KA.yml  02_Supervisor_Agent_MAS.yml
middleware/: .env.example  docker-compose.yml
middleware/external_knowledge_api/: Dockerfile  app.py
notebooks/: 00_data_setup.ipynb  00_prerequisites.ipynb  01_llm_integration.ipynb  02_http_api_integration.ipynb  03_mcp_integration.ipynb  04_rag_vector_search.ipynb  05_databricks_orchestrator.ipynb  06_observability.ipynb  07_summary.ipynb  99_cleanup.ipynb  _config.ipynb  config.ipynb
scripts/: patch-dify-plugin.sh
