[project]
name = "databricks-dify-integration"
version = "0.1.0"
description = "Databricks x Dify integration patterns verification"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.40.0",
    "databricks-vectorsearch>=0.42",
    "mlflow>=2.21",
    "databricks-agents>=0.17",
    "requests>=2.32",
    "flask>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 120
